// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component render the name: <h3>Andrea Escudero</h3> 1`] = `
<article>
  <h3>
    Andrea Escudero
  </h3>
  <h4 />
  <p />
  <ul
    class="contact"
  >
    <li
      class="contact-cv"
    >
      <a
        href="https://drive.google.com/open?id=1E48rb5mKkxbJkkgL8lZWurvk1cwHn_St"
        target="_blank"
      >
        <i
          class="fas fa-passport"
        />
         Currículum
      </a>
    </li>
    <li
      class="contact-in"
    >
      <a
        href="https://www.linkedin.com/in/andreaescudero/"
        target="_blank"
      >
        <i
          class="fab fa-linkedin"
        />
         LinkedIn
      </a>
    </li>
    <li
      class="contact-wl"
    >
      <a
        href="https://medium.com/latam-airlines/accesibilidad-digital-creando-experiencias-para-todos-52e420d3dbdb"
        target="_blank"
      >
        <i
          class="fab fa-medium"
        />
         Medium
      </a>
    </li>
  </ul>
</article>
`;

exports[`Card component render the role: <h4>UX Designer Senior</h4> 1`] = `
<article>
  <h3 />
  <h4>
    UX Designer Senior
  </h4>
  <p />
  <ul
    class="contact"
  >
    <li
      class="contact-cv"
    >
      <a
        href="https://drive.google.com/open?id=1E48rb5mKkxbJkkgL8lZWurvk1cwHn_St"
        target="_blank"
      >
        <i
          class="fas fa-passport"
        />
         Currículum
      </a>
    </li>
    <li
      class="contact-in"
    >
      <a
        href="https://www.linkedin.com/in/andreaescudero/"
        target="_blank"
      >
        <i
          class="fab fa-linkedin"
        />
         LinkedIn
      </a>
    </li>
    <li
      class="contact-wl"
    >
      <a
        href="https://medium.com/latam-airlines/accesibilidad-digital-creando-experiencias-para-todos-52e420d3dbdb"
        target="_blank"
      >
        <i
          class="fab fa-medium"
        />
         Medium
      </a>
    </li>
  </ul>
</article>
`;

exports[`Card component render the summary: <p>My summary</p> 1`] = `
<article>
  <h3 />
  <h4 />
  <p>
    My summary
  </p>
  <ul
    class="contact"
  >
    <li
      class="contact-cv"
    >
      <a
        href="https://drive.google.com/open?id=1E48rb5mKkxbJkkgL8lZWurvk1cwHn_St"
        target="_blank"
      >
        <i
          class="fas fa-passport"
        />
         Currículum
      </a>
    </li>
    <li
      class="contact-in"
    >
      <a
        href="https://www.linkedin.com/in/andreaescudero/"
        target="_blank"
      >
        <i
          class="fab fa-linkedin"
        />
         LinkedIn
      </a>
    </li>
    <li
      class="contact-wl"
    >
      <a
        href="https://medium.com/latam-airlines/accesibilidad-digital-creando-experiencias-para-todos-52e420d3dbdb"
        target="_blank"
      >
        <i
          class="fab fa-medium"
        />
         Medium
      </a>
    </li>
  </ul>
</article>
`;

exports[`Card component render with specific class: <article class="latamer uxd senior" 1`] = `
<article
  class="latamer uxd senior"
>
  <h3 />
  <h4 />
  <p />
  <ul
    class="contact"
  >
    <li
      class="contact-cv"
    >
      <a
        href="https://drive.google.com/open?id=1E48rb5mKkxbJkkgL8lZWurvk1cwHn_St"
        target="_blank"
      >
        <i
          class="fas fa-passport"
        />
         Currículum
      </a>
    </li>
    <li
      class="contact-in"
    >
      <a
        href="https://www.linkedin.com/in/andreaescudero/"
        target="_blank"
      >
        <i
          class="fab fa-linkedin"
        />
         LinkedIn
      </a>
    </li>
    <li
      class="contact-wl"
    >
      <a
        href="https://medium.com/latam-airlines/accesibilidad-digital-creando-experiencias-para-todos-52e420d3dbdb"
        target="_blank"
      >
        <i
          class="fab fa-medium"
        />
         Medium
      </a>
    </li>
  </ul>
</article>
`;
